# loca

./: .gitignore  LICENSE  README.md  pyproject.toml
src/loca/: __init__.py  core.py  errors.py  formatter.py  loader.py  models.py  plurals.py  relative.py
src/loca/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  ru.json  sv.json  tr.json  uk.json  zh-CN.json  zh-TW.json
